    CHANGED: disabled build of synchronizer by default, since it is unmaintained -
             build togglable with cmake variable -DENABLE_SYNCHRONIZER=true|false

    FIXED: [ 324737 ] symlinks with a target path length of over 255 do not work
    FIXED: [ 189943 ] toolbar position settings are not remembered
    FIXED: [ 316031 ] crash when loading previews
    FIXED: [ 238672 ] When saving checksums fails, they are lost. No 2nd chance to save elsewhere. 
    FIXED: [ 315764 ] "application/x-source-rpm" isn't linked to krarc protocol by default
    FIXED: [ 294816 ] Krusader needs to restart to apply new color scheme to panel
    FIXED: [ 308727 ] external editor command isn't properly parsed 
    FIXED: [ 304233 ] empty main view on startup
    FIXED: [ 315856 ] main view splitter sizes are not restored
    FIXED: [ 248691 ] incorrect layout / wrong buttons in queue manager
    FIXED: [ 315357 ] krarc silently fails to display contents of some zip files
           zip files containing paths with "." as a path component are still not handled,
           but now krarc reports an error instead silently failing
    FIXED: [ 310722 ] viewer crash when opening file
    FIXED: search result view always displays owner and group as "root"
           (may not work for remote search)
    FIXED: [ 217711 ] directory chooser dialog does not allow to choose a directory
    FIXED: [ 309119 ] Wrong "New directory" dialog behavior: can't clear all typed text
    FIXED: [ 309159 ] Crash in video files preview on F3


2.4.0-beta3 "Single Step"
=========================

    FIXED: crash when trying to open/(un)mount ejectable device via media menu


2.4.0-beta2 "Giant Steps"
=========================

    ADDED: options: Panel > Media Menu > 
                Show Mount Path
                Show File Sytem Type
                Show Size (Always | When Device has no Label | Never)
    ADDED: pressing CTRL+RETURN when media menu is open (un)mounts the highlighted device